--- a/frontend/src/sass/components/_message.scss
+++ b/frontend/src/sass/components/_message.scss
@@ -10,9 +10,9 @@
     padding-bottom: 0.5rem;
     transition: 0.15s ease-in-out;
 
-    small {
+    .body {
         margin: 0;
-        margin-bottom: 0.3rem !important;
+        margin-bottom: 0.2rem !important;
     }
 
     h4 {
@@ -26,6 +26,11 @@
     .date {
         font-size: 12px;
         color: $text-active;
+    }
+
+    .content {
+        font-size: 1em;
+        word-wrap: break-word;
     }
 }
 
